syntax = "proto3";
import "google/protobuf/empty.proto";
package keyshare;

service Coordinator {
    rpc ListKeys (google.protobuf.Empty) returns (KeyListReply);
    rpc AddKey (AddKeyRequest) returns (AddKeyReply);
    rpc AddMnemonic (AddMnemonicRequest) returns (AddMnemonicReply);
}

message AddKeyRequest {
    string keyhex = 1;
    uint32 index = 2;
}

message AddKeyReply {
    string message = 1;
}

message AddMnemonicRequest {
    string mnemonic = 1;
    uint32 index = 2;
}

message AddMnemonicReply {
    string message = 1;
}

message KeyListReply {
    repeated string items = 1;
}